test/edition/basics/attributeCheck-badOrdering.good
attributeCheck-badOrdering.chpl:3: error: last edition '2.0' is earlier than first edition 'preview'
